[package]
name = "libos"
description = "Library OS"
version = "0.1.3"
authors = ["KarimAllah Ahmed <karim.allah.ahmed@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/libos"
repository = "https://github.com/libvmm/libos"
license = "Apache-2.0"
keywords = [
    "amd64",
    "x86_64",
    "no_std",
    "os",
]
categories = [
    "no-std",
]

[dependencies]
x86_64 = "0.11.0"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
bootloader = { version = "0.9.4", features = ["map_physical_memory"]}
